--- a/HTMLPage.html
+++ b/HTMLPage.html
@@ -251,8 +251,10 @@ hello</textarea>
     </article>
 </section>
 <footer>
-    <address>republic of korea</address>
+    <address>south korea</address>
+    <p>asdasd</p>
 </footer>
 </body>
 </html>
+
 
