--- a/CSSPage.html
+++ b/CSSPage.html
@@ -66,6 +66,58 @@
         {
             color:red;
         }
+        h1+h2
+        {
+            color:red;
+        }
+        h1~h2
+        {
+            background-color: orange;
+        }
+        h1:hover
+        {
+            color: red;
+        }
+        h1:active
+        {
+            color:blue;
+        }
+        input:enabled
+        {
+            background-color: red;
+        }
+        input:disabled
+        {
+            background-color: blue;
+        }
+        input:focus
+        {
+            background-color:blue;
+        }
+        ul>li{
+            float: left;
+        }
+        li{
+            list-style-type: none;
+        }
+        li:nth-child(2n)
+        {
+            background-color: red;
+        }
+        li:nth-child(2n+1)
+        {
+            background-color: green;
+        }
+        p::first-letter
+        {
+            font-size: 3em;
+        }
+    
+        p::selection
+        {
+            color: red;
+            background-color: black;
+        }
     </style>
 </head>
 <body>
@@ -125,11 +177,45 @@
                 <th>regiion</th>
             </tr>
        </thead>
+       <tbody>
             <tr>
                 <td>한재혁</td>
                 <td>서울 특별시</td>
             </tr>
-        
+        </tbody>
     </table>
+    <div>
+        <h1>h1</h1>
+        <h2>h2</h2>
+        <h2>h2</h2>
+        <h2>h2</h2>
+        <h2>h2</h2>
+    </div>
+    <div>
+        <h1>touch me!</h1>
+    </div>
+    <div>
+        <input/>
+        <input value="disable" disabled="disabled"/>
+        <input type="checkbox" />
+    </div>
+    <div>
+        <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+            <li>6</li>
+        </ul>
+    </div>
+    <div>
+        <h1>hello</h1>
+        <p>my name is andy<br/>i'm 25 years old</p>
+    </div>
+    <div>
+        <h1>hello</h1>
+        <p>i'm going to be frontend-developer</p>
+    </div>
 </body>
 </html>
