--- a/CSSPage2.html
+++ b/CSSPage2.html
@@ -6,33 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    h1
-    {
-      margin: 10px;
-      font-size: 200%;
-      line-height:2em;
-    }
     p:nth-child(1)
     {
-      
+      font-size: 100%;
     }
     p:nth-child(2)
     {
-      font-size:100%;
+      font-size: 150%;
     }
     p:nth-child(3)
     {
-      font-size:150%;
+      font-size: 200%;
     }
-    
   </style>
 </head>
 <body>
+  <p>hello</p>  
   <p>hello</p>
-  <p>hello2</p>
-  <p>hello3</p>
-  <p>hello4</p>
-  <p>hello5</p>
+  <p>hello</p>
 </body>
 </html>
 <test></test>
