--- a/CSSPage2.html
+++ b/CSSPage2.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-      *
-      {
-        font-size: 12px;
-      }
-      h1
-      {
-        font-size: 3.0em;
-      }
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    h1
+    {
+      margin: 10px;
+      font-size: 200%;
+      line-height:2em;
+    }
+    p:nth-child(1)
+    {
       
-
-    </style>
+    }
+    p:nth-child(2)
+    {
+      font-size:100%;
+    }
+    p:nth-child(3)
+    {
+      font-size:150%;
+    }
+    
+  </style>
 </head>
 <body>
-    <h1>test</h1>
+  <p>hello</p>
+  <p>hello2</p>
+  <p>hello3</p>
+  <p>hello4</p>
+  <p>hello5</p>
 </body>
 </html>
 <test></test>
