--- a/source/ch_4/4-62.html
+++ b/source/ch_4/4-62.html
@@ -26,7 +26,7 @@
             width: 400px; height: 100px;
             border: 3px solid black;
             position: relative;
-            overflow-y: scroll;
+            overflow-x: scroll;
         }
     </style>
 </head>
